--- a/home.html
+++ b/home.html
@@ -1,10 +1,19 @@
+
+<html>
+<head>
+<title>WEB1 - html</title>
+<meta charset="utf-8">
+</head>
+<body>
 <ol>
   <li>HTML</li>
   <li>css</li>
   <li>JavaScript</li>
 </ol>
-
+<h1>HTML이란 무엇인가?</h1>
 <P>
   Hypertext Markup Language (HTML) is the standard markup language for creating web pages and web applications. With Cascading Style Sheets (CSS) and JavaScript, it forms a triad of cornerstone technologies for the World Wide Web.[4]
 </p>
 <img src="coding.jpg" width="100%">
+</body>
+</html>
