--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-
+<!doctype html>
 <html>
 <head>
 <title>WEB1 - html</title>
@@ -12,7 +12,7 @@
 </ol>
 <h1>HTML이란 무엇인가?</h1>
 <P>
-  Hypertext Markup Language (HTML) is the standard markup language for creating web pages and web applications. With Cascading Style Sheets (CSS) and JavaScript, it forms a triad of cornerstone technologies for the World Wide Web.[4]
+  <a href="https://www.w3.org/TR/html51/" target="_blank" title="html5 specification">Hypertext Markup Language (HTML)</a> is the standard markup language for creating web pages and web applications. With Cascading Style Sheets (CSS) and JavaScript, it forms a triad of cornerstone technologies for the World Wide Web.[4]
 </p>
 <img src="coding.jpg" width="100%">
 </body>
